--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
-    "vue": "^3.4.21",
+    "view-ui-plus": "^1.3.17",
+    "vue": "^3.4.29",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
