--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "prod": "vite build --mode prod",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "pinia": "^2.1.7",
     "view-ui-plus": "^1.3.17",
     "vue": "^3.4.29",
     "vue-router": "^4.3.0"
